--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
 }
 body {
   overflow-x: hidden;
+  cursor: none;
 }
 .mousefollower {
   border: 1px solid #ffffff6e;
@@ -969,13 +970,13 @@ body {
   }
 
   #page2 {
-    height: 50vh;
+    height: 60vh;
     width: 100%;
     position: relative;
     margin-top: 25vw;
   }
   #video-container {
-    height: 50vh;
+    height: 60vh;
     width: 100vw;
     left: 0;
   }
@@ -1007,7 +1008,7 @@ body {
   }
 
   #page3 {
-    margin-top: 25vw;
+    margin-top: 0;
   }
   #page3 h1 {
     font-size: 9.8vw;
@@ -1106,7 +1107,7 @@ body {
   }
 
   #page4 {
-    margin-top: 25vw;
+    margin-top: -20vh;
   }
   #page4-content {
     width: 100%;
@@ -1210,7 +1211,7 @@ body {
   }
 
   #page5 {
-    margin-top: 10vh;
+    margin-top: -5vh;
     min-height: 40vh;
   }
 
@@ -1223,7 +1224,7 @@ body {
   }
 
   #footer {
-    margin-top: 25vw;
+    margin-top: 0;
     min-height: 100vh;
     width: 100%;
     margin-left: 5vw;
@@ -1248,7 +1249,7 @@ body {
     font-weight: 400;
     position: absolute;
     left: 1%;
-    top: -1%;
+    top: 2%;
   }
   #footer-text svg {
     width: 12vw;
